; ModuleID = '/home/carl/AnghaBench/linux/drivers/video/fbdev/extr_udlfb.c_dlfb_submit_urb.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/video/fbdev/extr_udlfb.c_dlfb_submit_urb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dlfb_data = type { %struct.TYPE_4__*, i32, %struct.TYPE_3__ }
%struct.TYPE_4__ = type { i32 }
%struct.TYPE_3__ = type { i64 }
%struct.urb = type { i64 }

@GFP_KERNEL = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [22 x i8] c"submit urb error: %d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.dlfb_data*, %struct.urb*, i64)* @dlfb_submit_urb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dlfb_submit_urb(%struct.dlfb_data* %0, %struct.urb* %1, i64 %2) #0 {
  %4 = alloca %struct.dlfb_data*, align 8
  %5 = alloca %struct.urb*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  store %struct.dlfb_data* %0, %struct.dlfb_data** %4, align 8
  store %struct.urb* %1, %struct.urb** %5, align 8
  store i64 %2, i64* %6, align 8
  %8 = load i64, i64* %6, align 8
  %9 = load %struct.dlfb_data*, %struct.dlfb_data** %4, align 8
  %10 = getelementptr inbounds %struct.dlfb_data, %struct.dlfb_data* %9, i32 0, i32 2
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = icmp ugt i64 %8, %12
  %14 = zext i1 %13 to i32
  %15 = call i32 @BUG_ON(i32 %14)
  %16 = load i64, i64* %6, align 8
  %17 = load %struct.urb*, %struct.urb** %5, align 8
  %18 = getelementptr inbounds %struct.urb, %struct.urb* %17, i32 0, i32 0
  store i64 %16, i64* %18, align 8
  %19 = load %struct.urb*, %struct.urb** %5, align 8
  %20 = load i32, i32* @GFP_KERNEL, align 4
  %21 = call i32 @usb_submit_urb(%struct.urb* %19, i32 %20)
  store i32 %21, i32* %7, align 4
  %22 = load i32, i32* %7, align 4
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %24, label %36

24:                                               ; preds = %3
  %25 = load %struct.urb*, %struct.urb** %5, align 8
  %26 = call i32 @dlfb_urb_completion(%struct.urb* %25)
  %27 = load %struct.dlfb_data*, %struct.dlfb_data** %4, align 8
  %28 = getelementptr inbounds %struct.dlfb_data, %struct.dlfb_data* %27, i32 0, i32 1
  %29 = call i32 @atomic_set(i32* %28, i32 1)
  %30 = load %struct.dlfb_data*, %struct.dlfb_data** %4, align 8
  %31 = getelementptr inbounds %struct.dlfb_data, %struct.dlfb_data* %30, i32 0, i32 0
  %32 = load %struct.TYPE_4__*, %struct.TYPE_4__** %31, align 8
  %33 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %32, i32 0, i32 0
  %34 = load i32, i32* %7, align 4
  %35 = call i32 @dev_err(i32* %33, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0), i32 %34)
  br label %36

36:                                               ; preds = %24, %3
  %37 = load i32, i32* %7, align 4
  ret i32 %37
}

declare dso_local i32 @BUG_ON(i32) #1

declare dso_local i32 @usb_submit_urb(%struct.urb*, i32) #1

declare dso_local i32 @dlfb_urb_completion(%struct.urb*) #1

declare dso_local i32 @atomic_set(i32*, i32) #1

declare dso_local i32 @dev_err(i32*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
